nginx_ingress/terraform/sample-wi-deployment.yaml
kind: Pod
apiVersion: v1
metadata:
  name: busybox-secrets-store-inline
  namespace: ingress-nginx
spec:
  serviceAccountName: keyvaultclient
  containers:
  - name: busybox
    image: k8s.gcr.io/e2e-test-images/busybox:1.29
    command:
      - "/bin/sleep"
      - "10000"
    volumeMounts:
    - name: secrets-store-inline
      mountPath: "/mnt/secrets-store"
      readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: azure-csi-prov-kv
